# ForRF

./: .gitignore  CMakeLists.txt  Makefile  README.md  decon.py  deconit.f90  drwsac.f90  interpolation_mod.f90  interpolation_mod.mod  make_rf  mkl_dft_type.mod  mkl_dfti.mod  mkl_fft.mod  mklfft.f90  plot.py  rf.sac  test_R.sac  test_RF_ref.sac  test_T.sac  test_Z.sac  utils.f90  vis.ipynb
src/: CMakeLists.txt  deconit.cu  deconit.f90  main.f90
